Added Armand's review

--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -33,5 +33,27 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-12 mb-4">
+        <div class="card shadow-sm">
+          <div class="card-body p-4">
+            <div class="review-content">
+              Stéphane Cedroni tutored me for my last three years of High School. While working with him I was able to
+              raise my average from a 9/20 to a 16/20 and I went from hating Mathematics to actually enjoying them. I
+              even picked a Math class in University, which I would have never imagined!
+              During the period of time we worked together I felt that Stéphane was able to adapt his teaching process
+              to my needs and my self-confidence grew rapidly.
+              Thanks to Stéphane I was able to achieve all my academic goals and will always be very grateful to him.
+            </div>
+            <div class="review-footer mt-3">
+              <span class="author">
+                Armand Giraud <br> Class of 2020 at the LFNY
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
