--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -55,5 +55,28 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-12 mb-4">
+        <div class="card shadow-sm">
+          <div class="card-body p-4">
+            <div class="review-content">
+              Stéphane is an excellent bilingual math tutor. He worked with my daughter from age 14 to 17. First, she
+              was able to review concepts she had not consolidated and get up to pace with her classmates. She then
+              obtained top grades for her last two years of high school.
+              Stéphane is personable, patient and very well organized. His aim from day one is to help his students to
+              gain confidence and progress. He gives clear explanations of mathematical concepts and allows them to
+              practice and ask questions. He follows up and makes sure that students have understood and practice what
+              they’ve seen with him. We highly recommend him.
+            </div>
+            <div class="review-footer mt-3">
+              <span class="author">
+                A Franco-American family in NY
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
