--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -39,6 +39,10 @@
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
           href="#faq">FAQ</a>
       </li>
+      <li class="nav-item">
+        <a class="custom-button" data-toggle="collapse" data-target=".navbar-collapse.show"
+          href="https://cours.stephanecedroni.com">BOOK YOUR CLASS</a>
+      </li>
     </ul>
   </div>
 </nav>
