--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,8 +13,8 @@
               <ul class="fa-ul" style="margin-left: 1.5em">
                 <li><span class="fa-li"><i class="fas fa-check"></i></span>SAT, ACT</li>
                 <li><span class="fa-li"><i class="fas fa-check"></i></span>GMAT, GRE</li>
-                <li><span class="fa-li"><i class="fas fa-check"></i></span>SAT Subject Tests<br>
-                  Math Level 1, Level 2 & Physics
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>APs<br>
+                  Math, Computer Science, Physics
                 </li>
               </ul>
             </p>
@@ -29,7 +29,9 @@
               <ul class="fa-ul" style="margin-left: 1.5em">
                 <li><span class="fa-li"><i class="fas fa-check"></i></span>Mathematics</li>
                 <li><span class="fa-li"><i class="fas fa-check"></i></span>Physics</li>
-                <li><span class="fa-li"><i class="fas fa-check"></i></span>French Baccalauréat S/ES</li>
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>Programming (Python)</li>
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>French Baccalauréat</li>
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>International Baccalauréat</li>
               </ul>
             </p>
           </div>
@@ -39,14 +41,13 @@
       <div class="col-md-5 offset-md-1">
         <div class="card numbers">
           <div class="card-body">
-            <h4>2019 in numbers</h4>
-            <div class="mt-2"><span style="font-size: 40px">5</span> <span style="font-size: 14px">BAC ES/12th grade
-                students</span></div>
+            <h4>2021 in numbers</h4>
+            <div class="mt-2"><span style="font-size: 40px">7</span> <span style="font-size: 14px">BAC Spé Math students</span></div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
-            <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">BAC S/12th grade
+            <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">BAC Math Complémentaires
                 student</span></div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="100" aria-valuemin="0"
@@ -58,7 +59,7 @@
               <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="66%" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
-            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">11th grade/1ère
+            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 14px">11th grade/1ère
                 students</span></div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="66%" aria-valuemin="0"
@@ -71,12 +72,6 @@
                 aria-valuemax="100"></div>
             </div>
             <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">9th grade/3ème
-                student</span></div>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="50%" aria-valuemin="0"
-                aria-valuemax="100"></div>
-            </div>
-            <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">8th grade/4ème
                 student</span></div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="50%" aria-valuemin="0"
