Added link and icon to book a class

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,8 +40,9 @@
           href="#faq">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="custom-button" data-toggle="collapse" data-target=".navbar-collapse.show"
-          href="https://cours.stephanecedroni.com">BOOK YOUR CLASS</a>
+        <a class="custom-button" href="https://cours.stephanecedroni.com">
+          <i class="fas fa-calendar-check" style="color: #ffffff; margin-right: 8px;"></i><span>BOOK YOUR CLASS</span>
+        </a>
       </li>
     </ul>
   </div>
