--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <section class="resume-section d-column" id="about" style="border-bottom: 1px solid #eee">
   <div class="mb-4 d-flex justify-content-center align-items-center d-md-none">
     <img class="img-fluid img-profile rounded-circle w-50"
-      src="https://dl.dropboxusercontent.com/s/abrd1ub9biw7qri/profile2.jpg" alt="">
+      src="https://cours-math.s3.amazonaws.com/photo-presentation/profile2.jpg" alt="photo-stephane-cedroni">
   </div>
   <div class="section-title-container">
     <span class="section-title">About</h3>
@@ -23,7 +23,7 @@
     and overall confidence.
   </p>
   <p>
-    I live with my wife Eléonore, our son Henri and baby girl Chiara on the Upper East Side.
+    I live with my wife Eléonore and children in Miami.
   </p>
   <p>
     Please reach out with any questions you might have. I look forward to hearing from you and working together.
