--- a/_includes/education.html
+++ b/_includes/education.html
@@ -7,7 +7,7 @@
   <div class="card shadow-sm" style="border-radius: 0; margin-bottom: 10px">
     <div class="card-body">
       <div style="display: flex; flex-direction: row;">
-        <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/00jsvb9mk07ld6b/pNEFXL._SX425_.jpg" alt="..."
+        <img style="width: 80px; height: 80px;" src="https://cours-math.s3.amazonaws.com/photo-presentation/columbia.jpg" alt="logo-columbia-university"
           class="img-thumbnail rounded-circle profile-image">
         <div style="margin-left: 30px">
           <div class="school">Columbia University</div>
@@ -21,7 +21,7 @@
   <div class="card shadow-sm" style="border-radius: 0; margin-bottom: 10px">
     <div class="card-body">
       <div style="display: flex; flex-direction: row;">
-        <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/g9iw6ygu0ugkxr9/polytechnique_1.jpg" alt="..."
+        <img style="width: 80px; height: 80px;" src="https://cours-math.s3.amazonaws.com/photo-presentation/polytechnique.jpg" alt="logo-polytechnique"
           class="img-thumbnail rounded-circle profile-image">
         <div style="margin-left: 30px">
           <div class="school">Ecole Polytechnique</div>
@@ -35,7 +35,7 @@
   <div class="card shadow-sm" style="border-radius: 0; margin-bottom: 10px">
     <div class="card-body">
       <div style="display: flex; flex-direction: row;">
-        <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/ths2mctn34bcnk3/LLG_logo.png" alt="..."
+        <img style="width: 80px; height: 80px;" src="https://cours-math.s3.amazonaws.com/photo-presentation/llg.png" alt="logo-llg"
           class="img-thumbnail rounded-circle profile-image">
         <div style="margin-left: 30px">
           <div class="school">Lycée Louis-Le-Grand</div>
@@ -46,7 +46,3 @@
     </div>
   </div>
 </section>
-
-<!-- src="https://dl.dropboxusercontent.com/s/ths2mctn34bcnk3/LLG_logo.png"
-src="https://dl.dropboxusercontent.com/s/g9iw6ygu0ugkxr9/polytechnique_1.jpg"
-src="https://dl.dropboxusercontent.com/s/00jsvb9mk07ld6b/pNEFXL._SX425_.jpg" -->
