--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -16,9 +16,7 @@
 
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
         <div class="card-body">
-          During these difficult times I am only offering online lessons. I have a lot of experience with online classes
-          and use tools such as Google Docs to write everything we need during the session and keep track of our past
-          lessons.
+          I bring extensive experience with online classes, utilizing tools like Google Docs and an iPad to document everything needed during sessions and to maintain a record of previous lessons. The iPad serves as a digital blackboard.
         </div>
       </div>
     </div>
@@ -35,8 +33,7 @@
       </div>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
         <div class="card-body">
-          I recommend two 1-hour or two 45-minutes sessions per week. In my experience it’s best for the student’s
-          focus, and helps stay up to date with the class material.
+          I recommend two 40-minute sessions per week. Based on my experience, this schedule optimizes the student’s focus and helps them stay up to date with the class material. Additionally, I assign homework between classes to reinforce the concepts covered.
         </div>
       </div>
     </div>
