--- a/_includes/stages_nav.html
+++ b/_includes/stages_nav.html
@@ -14,34 +14,22 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
-          href="#about">About</a>
+          href="#matieres">Les matières</a>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link js-scroll-trigger active" href="#education">Experience</a>
       </li> -->
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
-          href="#skills">Skills</a>
+          href="#presentation">Présentation</a>
       </li>
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
-          href="#education">Education</a>
+          href="#inscription">Inscription</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
-          href="#testimonials">Testimonials</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
-          href="#contact">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
-          href="#faq">FAQ</a>
-      </li>
-      <li class="nav-item">
-        <a class="custom-button" href="{{ site.baseurl }}/stages/">
-          <i class="fas fa-calendar-check" style="color: #ffffff; margin-right: 8px;"></i><span>Stages de pré-rentrée</span>
+        <a class="custom-button" href="/">
+          <i class="fas fa-home" style="color: #ffffff; margin-right: 8px;"></i><span>Accueil</span>
         </a>
       </li>
     </ul>
