--- a/css/main.scss
+++ b/css/main.scss
@@ -255,6 +255,14 @@ p {
   width: 100%;
 }
 
+.mb-80 {
+  margin-bottom: 120px;
+}
+
+.font-button {
+  font-size: 1.2rem;
+}
+
 @import "nav";
 @import "resumeitem";
 @import "formkeep";
