--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -41,7 +41,7 @@
       <div class="col-md-5 offset-md-1">
         <div class="card numbers">
           <div class="card-body">
-            <h4>2021 in numbers</h4>
+            <h4>2023-2024 in numbers</h4>
             <div class="mt-2"><span style="font-size: 40px">7</span> <span style="font-size: 14px">BAC Spé Math students</span></div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
