--- a/_includes/registration_form.html
+++ b/_includes/registration_form.html
@@ -1,7 +1,7 @@
 <div class="row mt-5 mb-80" id="inscription">
   <div class="col-12">
     <h2 class="text-center">Inscription</h2>
-    <form class="wj-contact" action="https://formspree.io/{{site.email}}" method="POST">
+    <form class="wj-contact" action="https://formsubmit.co/{{site.email}}" method="POST">
       <div class="form-row">
         <div class="form-group col-md-6 pr-4">
           <label for="inputName">Prénom et Nom</label>
