--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="col-md-6 offset-md-1">
-        <form class="wj-contact" action="https://formsubmit.co/{{site.email}}" method="POST">
+        <form class="wj-contact" action="https://formsubmit.co/9cf39118291fad038ce1eff1ecc7510a" method="POST">
           <input type="text" name="email" placeholder="Email Address">
           <textarea type="text" name="content" rows="10" placeholder="Message"></textarea>
           <input type="hidden" name="_next" value="http://localhost:4000">
