--- a/_includes/registration_form.html
+++ b/_includes/registration_form.html
@@ -5,17 +5,17 @@
       <div class="form-row">
         <div class="form-group col-md-6 pr-4">
           <label for="inputName">Prénom et Nom</label>
-          <input type="text" class="form-control" id="inputName" placeholder="Nom">
+          <input type="text" class="form-control" id="inputName" placeholder="Nom" required>
         </div>
         <div class="form-group col-md-6 pr-4">
           <label for="inputEmail">Email</label>
-          <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+          <input type="email" class="form-control" id="inputEmail" placeholder="Email required">
         </div>
       </div>
       <div class="form-row">
         <div class="form-group col-md-6 pr-4">
           <label for="inputPhone">Téléphone</label>
-          <input type="tel" class="form-control" id="inputPhone" placeholder="Téléphone">
+          <input type="tel" class="form-control" id="inputPhone" placeholder="Téléphone" required>
         </div>
         <div class="form-group col-md-6 pr-4">
           <label for="inputWeek">Choisir la semaine</label>
@@ -65,7 +65,7 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="inputAverageGrade">Moyenne de l'année précédente</label>
-          <input type="number" class="form-control" id="inputAverageGrade" placeholder="Moyenne">
+          <input type="number" class="form-control" id="inputAverageGrade" placeholder="Moyenne" required>
         </div>
       </div>
       <div class="form-row">
@@ -74,7 +74,8 @@
           <textarea class="form-control" id="inputNotes" rows="4" placeholder="Ajoutez des informations supplémentaires ici..."></textarea>
         </div>
       </div>
-      <button type="submit" class="mt-1 btn btn-primary py-2 px-4 font-button">S'inscrire</button>
+      <input type="hidden" name="_subject" value="New Contact Form Submission">
+      <input type="submit" value="Send">
     </form>
   </div>
 </div>
