--- a/_includes/registration_form.html
+++ b/_includes/registration_form.html
@@ -74,7 +74,8 @@
           <textarea class="form-control" id="inputNotes" name="inputNotes" rows="4" placeholder="Ajoutez des informations supplémentaires ici..."></textarea>
         </div>
       </div>
-      <input type="hidden" name="_subject" value="New Contact Form Submission">
+      <input type="hidden" name="_subject" value="Registration Form Submission">
+      <div class="h-captcha" data-sitekey="28a00b00-9240-4cfc-86e2-2932b2662cd2"></div>
       <input type="submit" value="Send">
     </form>
   </div>
