--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -40,7 +40,7 @@
           <input type="text" name="email" placeholder="Email Address">
           <textarea type="text" name="content" rows="10" placeholder="Message"></textarea>
           <input type="hidden" name="_subject" value="New Contact Form Submission">
-          <input type="text" name="_gotcha" style="display:none">
+          <div class="h-captcha" data-sitekey="28a00b00-9240-4cfc-86e2-2932b2662cd2"></div>
           <input type="submit" value="Send">
         </form>
       </div>
