--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css"> -->
   <link rel="stylesheet" href="/css/main.css">
+  <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
   <!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
   {% if jekyll.environment == 'production' %}
   {% include analytics.html %}
