More reviews and hcaptcha

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -19,7 +19,7 @@
             <i class="fas fa-map-marker-alt"></i>
           </div>
           <div class="colorlib-text">
-            <p>Upper East Side, New York NY 10028</p>
+            <p>Miami, Florida</p>
           </div>
         </div>
 
