--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,7 +40,7 @@
           href="#faq">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="custom-button" href="{{ site.baseurl }}/stages/">
+        <a class="navigation-button" href="{{ site.baseurl }}/stages/">
           <i class="fas fa-calendar-check" style="color: #ffffff; margin-right: 8px;"></i><span>Stages de pré-rentrée</span>
         </a>
       </li>
