--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -78,5 +78,23 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-12 mb-4">
+        <div class="card shadow-sm">
+          <div class="card-body p-4">
+            <div class="review-content">
+              Stephane has tutored me in mathematics for my last year of high school in the International Baccalaureate. I can confidently say that with his patience and knowledge, he has helped me improve my mathematical skills as well as my way of learning and this led me to successfully obtain my IB diploma. In addition to our weekly classes, Stephane was also indispensable during the realisation of my Internal Assessment in Maths AA SL. With his knowledge of Maths and Physics, we were able to holistically study the architecture of the San Francisco Bridge.
+              I am grateful Stephane has supported me to achieve my goals in mathematics.
+            </div>
+            <div class="review-footer mt-3">
+              <span class="author">
+                Shade <br> Class of 2023, International Baccalaureate
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
