--- a/_includes/registration_form.html
+++ b/_includes/registration_form.html
@@ -19,7 +19,7 @@
         </div>
         <div class="form-group col-md-6 pr-4">
           <label for="inputWeek">Choisir la semaine</label>
-          <select name="inputWeek" id="inputWeek" class="form-control">
+          <select name="inputWeek" id="inputWeek" class="form-control" style="margin-top: 0.25em;">
             <option selected>Semaine du 19 août</option>
             <option>Semaine du 26 août</option>
           </select>
