--- a/_includes/stages_nav.html
+++ b/_includes/stages_nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-  <a class="navbar-brand js-scroll-trigger" href="#page-top">
+  <a class="navbar-brand js-scroll-trigger" href="/">
     <span class="d-block d-lg-none">Stéphane Cedroni</span>
     <span class="d-none d-lg-block">
       <img class="img-fluid img-profile rounded-circle mx-auto mb-2"
@@ -28,7 +28,7 @@
           href="#inscription">Inscription</a>
       </li>
       <li class="nav-item">
-        <a class="custom-button" href="/">
+        <a class="navigation-button" href="/">
           <i class="fas fa-home" style="color: #ffffff; margin-right: 8px;"></i><span>Accueil</span>
         </a>
       </li>
