New vimeo video

--- a/_includes/registration_form.html
+++ b/_includes/registration_form.html
@@ -76,7 +76,7 @@
       </div>
       <input type="hidden" name="_subject" value="Registration Form Submission">
       <div class="h-captcha" data-sitekey="28a00b00-9240-4cfc-86e2-2932b2662cd2"></div>
-      <input type="submit" value="Send">
+      <input type="submit" value="Envoyer">
     </form>
   </div>
 </div>
