--- a/_includes/stages_description.html
+++ b/_includes/stages_description.html
@@ -14,7 +14,7 @@
     <!-- Right Column -->
     <div class="col-md-6">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/991244289" allowfullscreen></iframe>
       </div>
     </div>
   </div>
