--- a/_includes/stages_offer.html
+++ b/_includes/stages_offer.html
@@ -7,7 +7,7 @@
         <p class="card-text">Révisez les concepts clés des mathématiques pour être prêt pour la nouvelle année scolaire. Ce stage couvre les chapitres importants de l'année précédente.</p>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Dates: semaines du 21 août et 28 août</li>
-          <li class="list-group-item">Prix: 290$/semaine</li>
+          <li class="list-group-item">Prix: 290$/semaine Lundi-Vendredi (cours en groupe)</li>
           <li class="list-group-item">Moyen: via Zoom</li>
           <li class="list-group-item">En groupe ou individuel</li>
         </ul>
@@ -23,7 +23,7 @@
         <p class="card-text">Revoir les chapitres importants en physique pour progresser et apprécier les sciences. Ce stage couvre les sujets essentiels de l'année précédente.</p>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Dates: semaines du 21 août et 28 août</li>
-          <li class="list-group-item">Prix: 290$/semaine</li>
+          <li class="list-group-item">Prix: 290$/semaine Lundi-Vendredi (cours en groupe)</li>
           <li class="list-group-item">Moyen: via Zoom</li>
           <li class="list-group-item">En groupe ou individuel</li>
         </ul>
