--- a/_includes/stages_offer.html
+++ b/_includes/stages_offer.html
@@ -6,10 +6,12 @@
         <h5 class="card-title">Stage de Maths</h5>
         <p class="card-text">Révisez les concepts clés des mathématiques pour être prêt pour la nouvelle année scolaire. Ce stage couvre les chapitres importants de l'année précédente.</p>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Dates: semaines du 21 août et 28 août</li>
-          <li class="list-group-item">Prix: 290$/semaine Lundi-Vendredi (cours en groupe)</li>
+          <li class="list-group-item">Dates: semaines du 21 août et/ou 28 août</li>
+          <li class="list-group-item">Jours: Lundi à Vendredi</li>
+          <li class="list-group-item">Prix: 290$/semaine (cours en groupe)</li>
           <li class="list-group-item">Moyen: via Zoom</li>
-          <li class="list-group-item">En groupe ou individuel</li>
+          <li class="list-group-item">En groupe (4 élèves)</li>
+          <li class="list-group-item">Cours individuel sur demande</li>
         </ul>
       </div>
     </div>
@@ -22,10 +24,12 @@
         <h5 class="card-title">Stage de Physique-Chimie</h5>
         <p class="card-text">Revoir les chapitres importants en physique pour progresser et apprécier les sciences. Ce stage couvre les sujets essentiels de l'année précédente.</p>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Dates: semaines du 21 août et 28 août</li>
-          <li class="list-group-item">Prix: 290$/semaine Lundi-Vendredi (cours en groupe)</li>
+          <li class="list-group-item">Dates: semaines du 21 août et/ou 28 août</li>
+          <li class="list-group-item">Jours: Lundi à Vendredi</li>
+          <li class="list-group-item">Prix: 290$/semaine (cours en groupe)</li>
           <li class="list-group-item">Moyen: via Zoom</li>
-          <li class="list-group-item">En groupe ou individuel</li>
+          <li class="list-group-item">En groupe (4 élèves)</li>
+          <li class="list-group-item">Cours individuel sur demande</li>
         </ul>
       </div>
     </div>
