--- a/_includes/stages_offer.html
+++ b/_includes/stages_offer.html
@@ -4,7 +4,7 @@
       <img src="https://images.unsplash.com/photo-1676302440263-c6b4cea29567?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&h=600&q=80" class="card-img-top" alt="Maths Stage">
       <div class="card-body">
         <h5 class="card-title">Stage de Maths</h5>
-        <p class="card-text">Révisez les concepts clés des mathématiques pour être prêt pour la nouvelle année scolaire. Ce stage couvre les chapitres importants de l'année précédente.</p>
+        <p class="card-text">Révisez les concepts clés des mathématiques pour être prêt pour la nouvelle année scolaire. Ce stage couvre les chapitres importants de l'année précédente et prépare pour la nouvelle année scolaire.</p>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Dates: semaines du 21 août et/ou 28 août</li>
           <li class="list-group-item">Jours: Lundi à Vendredi</li>
@@ -22,7 +22,7 @@
       <img src="https://images.unsplash.com/photo-1614728263952-84ea256f9679?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&h=600&q=80" class="card-img-top" alt="Physique Stage">
       <div class="card-body">
         <h5 class="card-title">Stage de Physique-Chimie</h5>
-        <p class="card-text">Revoir les chapitres importants en physique pour progresser et apprécier les sciences. Ce stage couvre les sujets essentiels de l'année précédente.</p>
+        <p class="card-text">Revoir les chapitres importants en physique pour progresser et apprécier les sciences. Ce stage couvre les sujets essentiels de l'année précédente et prépare pour la nouvelle année scolaire.</p>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Dates: semaines du 21 août et/ou 28 août</li>
           <li class="list-group-item">Jours: Lundi à Vendredi</li>
