--- a/_includes/registration_form.html
+++ b/_includes/registration_form.html
@@ -1,6 +1,6 @@
 <div class="row mt-5 mb-80" id="inscription">
   <div class="col-12">
-    <h2 class="text-center">Inscription</h2>
+    <h2 class="text-center mb-4">Inscription</h2>
     <form class="wj-contact" action="https://submit-form.com/5npFL9QmS" method="POST">
       <div class="form-row">
         <div class="form-group col-md-6 pr-4">
