--- a/_includes/stages_description.html
+++ b/_includes/stages_description.html
@@ -1,8 +1,8 @@
-<div class="container mt-5" id="programme">
+<div class="container mt-5" id="presentation">
   <div class="row">
     <!-- Left Column -->
     <div class="col-md-6">
-      <h2>Le programme</h2>
+      <h2 class="mb-3">Le programme</h2>
       <ul>
         <li>Les cours sont organisés via Zoom avec partage d'écran en guise de tableau</li>
         <li>Des devoirs et exercices à préparer d'un cours à l'autre pour optimiser les révisions</li>
